<resources>
    <string name="app_name">GeoRo</string>
    <string name="culinary_profile">Profil Culinar</string>
    <string name="please_enter_name">Te rugăm să introduci numele tău</string>
    <string name="profile_saved">Profil salvat cu succes</string>
    <string name="retete_romanesti">Retete Romanesti</string>
    <string name="welcome_title_1">Bine ai venit în Călătoria Culinară</string>
    <string name="welcome_text_1">Descoperă rețete delicioase din toate regiunile României și începe-ți aventura culinară.</string>
    <string name="welcome_title_2">Planifică-ți Mesele</string>
    <string name="welcome_text_2">Creează meniuri săptămânale și generează liste de cumpărături pentru ingredientele necesare.</string>
    <string name="welcome_title_3">Devino un Chef Expert</string>
    <string name="welcome_text_3">Învață tehnici noi, descoperă ingrediente speciale și explorează gusturile tradiționale românești.</string>
    <string name="my_recipes">Rețetele mele</string>
    <string name="favorites">Favorite</string>
    <string name="recently_viewed">Vizionate recent</string>
    <string name="no_favorite_recipes">Nu ai nicio rețetă favorită</string>
    <string name="no_created_recipes">Nu ai creat nicio rețetă</string>
    <string name="no_recent_recipes">Nu ai vizionat nicio rețetă recent</string>
    <string name="shopping_list_title">Listă de cumpărături</string>
    <string name="add_shopping_item">Adaugă element</string>
    <string name="item_image">Imagine element</string>
    <string name="select_image">Selectează imagine</string>
    <string name="item_name">Nume element</string>
    <string name="category">Categorie</string>
    <string name="category_fruits">Fructe</string>
    <string name="category_vegetables">Legume</string>
    <string name="category_dairy">Lactate</string>
    <string name="category_other">Altele</string>
    <string name="custom_category">Categorie personalizată</string>
    <string name="quantity">Cantitate</string>
    <string name="unit">Unitate</string>
    <string name="cancel_button_description">Anulează</string>
    <string name="add_button_description">Adaugă la listă</string>
    <string name="add">Adaugă</string>
    <string name="recipe_image_carousel_description">Carusel de imagini pentru rețetă</string>
    <string name="recipe_title_description">Titlul rețetei</string>
    <string name="recipe_not_rated">Această rețetă nu a fost încă evaluată</string>
    <string name="difficulty_icon_description">Pictogramă de dificultate</string>
    <string name="prep_time_icon_description">Pictogramă timp de preparare</string>
    <string name="cook_time_icon_description">Pictogramă timp de gătire</string>
    <string name="save_recipe_description">Salvează rețeta</string>
    <string name="cook_today_description">Gătește astăzi</string>
    <string name="ingredients_tab_description">Filă ingrediente</string>
    <string name="steps_tab_description">Filă pași</string>
    <string name="steps">Pași</string>
    <string name="info_tab_description">Filă informații</string>
    <string name="info">Informații</string>
    <string name="ingredients_list_description">Lista de ingrediente</string>
    <string name="steps_list_description">Lista de pași</string>
    <string name="cultural_significance_title_description">Titlu semnificație culturală</string>
    <string name="calories_description">Calorii</string>
    <string name="protein">Proteine</string>
    <string name="carbs">Carbohidrați</string>
    <string name="fat">Grăsimi</string>
    <string name="fiber">Fibre</string>
    <string name="sugar">Zahăr</string>
    <string name="sodium">Sodiu</string>
    <string name="rate_recipe_title_description">Evaluează această rețetă</string>
    <string name="rating_stars_description">Stele de evaluare</string>
    <string name="submit_rating_description">Trimite evaluarea</string>
    <string name="search_recipes_hint">Introdu numele rețetei sau ingredientele</string>
    <string name="search_icon_content_description">Pictogramă căutare</string>
    <string name="material_type_font_family_headline">sans-serif-medium</string>
    <string name="what_can_i_cook">Ce pot să gătesc?</string>
    <string name="clear_ingredients">Șterge ingredientele</string>
    <string name="select_available_ingredients">Selectează ingredientele disponibile</string>
    <string name="ingredients_dropdown_hint">Alege ingredientele</string>
    <string name="ingredients_available_title">Ingrediente disponibile</string>
    <string name="suggested_recipes">Rețete sugerate</string>
    <string name="add_missing_ingredients">Adaugă ingredientele lipsă</string>
    <string name="carousel_dot_indicator">Indicator carusel</string>
    <string name="select_recipe">Selectează rețeta</string>
    <string name="recipe_match_score">Potrivire: %d%%</string>
    <string name="rom_culinary_title">Călătorie Culinară Românească</string>
    <string name="recipe_not_found">Rețeta nu a fost găsită</string>
    <string name="added_to_meal_plan">Adăugat la planul de masă</string>
    <string name="calories">Calorii</string>
    <string name="rom_achievements_title">Realizări</string>
    <string name="rom_achievements_empty">Nu ai deblocat încă nicio realizare</string>
    <string name="rom_achievements_progress">Realizări deblocate: %1$d din %2$d</string>
    <string name="rom_achievement_unlocked">Realizare deblocată!</string>
    <string name="achievement_unlocked">Realizare deblocată: %1$s</string>
    <string name="rom_achievements_stats_title">Statistici de joc</string>
    <string name="rom_achievements_unlocked_label">Realizări deblocate</string>
    <string name="rom_achievements_list_description">Realizările Tale</string>
    <string name="rom_culture_points_label">Puncte culturale: %1$d</string>
    <string name="achievement_unlocked_description">Realizare deblocată</string>
    <string name="rom_back">Înapoi</string>
    <string name="rom_points_required">Puncte necesare:</string>
    <string name="game_title">Țară, Țară, Vrem Ostași!</string>
    <string name="game_subtitle">Joc tradițional românesc</string>
    <string name="round_counter">Runda: %1$d</string>
    <string name="round_counter_format">Runda: %1$d</string>
    <string name="player_team_1">Echipa ta</string>
    <string name="enemy_team">Echipa adversă</string>
    <string name="soldiers_count">Soldați: %1$d</string>
    <string name="morale_level">Moral: %1$d</string>
    <string name="resistance_level">Rezistență: %1$d</string>
    <string name="shout_button">Strigă</string>
    <string name="answer_button">Răspunde</string>
    <string name="swipe_arrow_description">Indicator direcție de glisare</string>
    <string name="play_again">Joacă din nou</string>
    <string name="chase_prompt">Încearcă să spargi zidul!</string>
    <string name="chase_player_instruction">Trage în jos pentru a străpunge zidul!</string>
    <string name="chase_ai_instruction">Adversarul încearcă să spargă zidul...</string>
    <string name="chase_success">Zidul a fost spart!</string>
    <string name="chase_failure">Nu ai reușit să spargi zidul!</string>
    <string name="morale_up">Moralul echipei a crescut!</string>
    <string name="morale_down">Moralul echipei a scăzut!</string>
    <string name="swipe_instructions">Glisează în direcția indicată de săgeată!</string>
    <string name="rom_fuel_label">%1$d L</string>
    <string name="rom_money_label">%1$d RON</string>
    <string name="rom_food_label">%1$d kg</string>
    <string name="quest_title">Căutarea Tainelor României</string>
    <string name="quest_completed_message">Felicitări! Ai completat această misiune.\n\nAi fost recompensat cu 25 de Puncte de Înțelepciune pentru cunoașterea ta despre România.</string>
    <string name="quest_objectives_title">Obiective:</string>
    <string name="quest_start_challenge">Începe Provocarea</string>
    <string name="quest_cancel">Renunță</string>
    <string name="quest_points_earned">Ai câștigat 25 Puncte de Înțelepciune!</string>
    <string name="quest_challenge_title">Provocare</string>
    <string name="quest_answer_hint">Introdu răspunsul</string>
    <string name="quest1_title">Tainele Transilvaniei</string>
    <string name="quest1_description">Descoperă tradițiile și cultura transilvăneană într-o aventură captivantă.</string>
    <string name="quest1_objective1">Identifică specificul cultural al Transilvaniei</string>
    <string name="quest1_objective2">Află despre principalele așezări medievale</string>
    <string name="quest1_objective3">Descoperă tradițiile populare</string>
    <string name="quest2_title">Marea Unire</string>
    <string name="quest2_description">Pornește într-o călătorie fascinantă prin istoria formării României Mari.</string>
    <string name="quest2_objective1">Descoperă momentele cheie ale Marii Uniri</string>
    <string name="quest2_objective2">Identifică personalitățile care au contribuit la acest eveniment crucial</string>
    <string name="quest3_title">Bucate Românești</string>
    <string name="quest3_description">O incursiune în tainele bucătăriei tradiționale din toate regiunile țării.</string>
    <string name="quest3_objective1">Descoperă rețete tradiționale românești</string>
    <string name="quest3_objective2">Identifică preparatele specifice fiecărei regiuni</string>
    <string name="quest3_objective3">Află despre ingredientele autentice folosite</string>
    <string name="quest3_objective4">Descoperă obiceiurile culinare de sărbători</string>
    <string name="quest4_title">Călătorie pe Dunăre</string>
    <string name="quest4_description">Explorează frumusețile naturale ale Dunării și Delta Dunării.</string>
    <string name="quest4_objective1">Descoperă fauna și flora unică a Deltei Dunării</string>
    <string name="quest4_objective2">Identifică principalele obiective turistice din regiunea dunăreană</string>
    <string name="quest5_title">Pe urmele lui Brâncoveanu</string>
    <string name="quest5_description">Descoperă stilul arhitectural brâncovenesc și moștenirea lăsată de domnitorul martir.</string>
    <string name="quest5_objective1">Află despre viața și sfârșitul tragic al lui Constantin Brâncoveanu</string>
    <string name="quest5_objective2">Descoperă edificiile emblematice construite în stil brâncovenesc</string>
    <string name="quest5_objective3">Identifică elementele definitorii ale stilului brâncovenesc</string>
    <string name="minigame_label">MINI-JOC ROMÂNIA</string>
    <string name="minigame_description">Explorează România într-un mini-joc interactiv</string>
    <string name="quiz_label">ÎNCEPE QUIZ-UL</string>
    <string name="map_label">EXPLOREAZĂ HARTA</string>
    <string name="quest_label">QUEST PATRIMONIU</string>
    <string name="culinary_label">CĂLĂTORIE CULINARĂ</string>
    <string name="culinary_journey_hint">Descoperă tradițiile culinare românești</string>
    <string name="minigame_level">Nivel: %1$d</string>
    <string name="minigame_mission">Misiune: %1$s</string>
    <string name="minigame_new_mission">Misiune nouă: %1$s</string>
    <string name="minigame_level_up">Felicitări! Ai avansat la nivelul %1$d</string>
    <string name="minigame_collect_mission">Colectează %1$d obiecte tradiționale</string>
    <string name="cancel">Anulează</string>
    <string name="go_back">Înapoi</string>
    <string name="muntenia_map_title">Harta Munteniei</string>
    <string name="map_of_muntenia">Harta regiunii Muntenia</string>
    <string name="progress_text">Progres: 0/5 locații vizitate</string>
    <string name="leaderboard_title">Clasament</string>
    <string name="region_label">Regiune:</string>
    <string name="game_type_label">Tip joc:</string>
    <string name="rank_header">Rang</string>
    <string name="player_header">Jucător</string>
    <string name="score_header">Scor</string>
    <string name="no_leaderboard_entries">Nu există încă intrări în clasament</string>
</resources>