<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RomApp.MunteniaMapActivity">

    <ImageView
        android:id="@+id/mapImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:scaleType="fitCenter"
        android:src="@drawable/muntenia_map"
        android:contentDescription="@string/map_of_muntenia"
        app:layout_constraintBottom_toTopOf="@+id/progressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muntenia_map_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/go_back"
            android:onClick="goBack"
            android:padding="8dp"
            android:src="@drawable/ic_back" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Location markers -->
    <View
        android:id="@+id/location1"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/location_not_completed"
        app:layout_constraintBottom_toBottomOf="@+id/mapImageView"
        app:layout_constraintEnd_toEndOf="@+id/mapImageView"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="@+id/mapImageView"
        app:layout_constraintTop_toTopOf="@+id/mapImageView"
        app:layout_constraintVertical_bias="0.58" />

    <View
        android:id="@+id/location2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/location_not_completed"
        app:layout_constraintBottom_toBottomOf="@+id/mapImageView"
        app:layout_constraintEnd_toEndOf="@+id/mapImageView"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="@+id/mapImageView"
        app:layout_constraintTop_toTopOf="@+id/mapImageView"
        app:layout_constraintVertical_bias="0.45" />

    <View
        android:id="@+id/location3"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/location_not_completed"
        app:layout_constraintBottom_toBottomOf="@+id/mapImageView"
        app:layout_constraintEnd_toEndOf="@+id/mapImageView"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="@+id/mapImageView"
        app:layout_constraintTop_toTopOf="@+id/mapImageView"
        app:layout_constraintVertical_bias="0.42" />

    <View
        android:id="@+id/location4"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/location_not_completed"
        app:layout_constraintBottom_toBottomOf="@+id/mapImageView"
        app:layout_constraintEnd_toEndOf="@+id/mapImageView"
        app:layout_constraintHorizontal_bias="0.32"
        app:layout_constraintStart_toStartOf="@+id/mapImageView"
        app:layout_constraintTop_toTopOf="@+id/mapImageView"
        app:layout_constraintVertical_bias="0.30" />

    <View
        android:id="@+id/location5"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:background="@drawable/location_not_completed"
        app:layout_constraintBottom_toBottomOf="@+id/mapImageView"
        app:layout_constraintEnd_toEndOf="@+id/mapImageView"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="@+id/mapImageView"
        app:layout_constraintTop_toTopOf="@+id/mapImageView"
        app:layout_constraintVertical_bias="0.55" />

    <TextView
        android:id="@+id/progressText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/progress_text"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout> 